--- a/horoscope/templates/horoscope/info_zodiac.html
+++ b/horoscope/templates/horoscope/info_zodiac.html
@@ -1,12 +1,19 @@
 {% extends 'base.html' %}
 
+{% load static %}
+{% load my_filter %}
+
 {% block title %}
     Гороскоп для {{ sign|capfirst }}
 {% endblock %}
 
+{% block css_additional %}
+    <link rel="stylesheet" href="{% static 'horoscope/css/info.css' %}">
+{% endblock %}
+
 {% block content %}
     {% include 'includes/navbar.html' %}
-    <h1>Приложение Гороскоп</h1>
+    <h1>{{ description_zodiac|split|first }}</h1>
     {% if description_zodiac is None %}
         <h2>Неправильный знак зодиака - {{ sign|upper }}</h2>
     {% else %}
